<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/login_title"
        android:text="@string/login_title"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/login_username"
        android:gravity="center_vertical"
        android:layout_marginTop="25dp"
        android:layout_below="@id/login_title"
        android:hint="@string/login_username_placeholder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/login_password"
        android:gravity="center_vertical"
        android:layout_marginTop="25dp"
        android:layout_below="@id/login_username"
        android:hint="@string/login_password_placeholder"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/login_button"
        android:text="@string/login_button"
        android:background="@color/light_blue_500"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
