<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/workout_name_card"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        card_view:cardCornerRadius="4dp"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/workout_name_layout"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:background="@color/light_blue_700">
                <TextView
                    android:id="@+id/workout_name_label"
                    android:text="@string/workout_name"
                    android:textSize="22dp"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/workout_name"
                android:hint="@string/example_workout_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:inputType="textCapWords"
                android:layout_below="@id/workout_name_label"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/workout_save_btn"
        android:text="@string/workout_create_btn"
        android:background="@color/light_blue_500"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/workout_name_card"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/add_exercises_btn"
        android:text="@string/workout_add_exercises_btn"
        android:background="@color/light_blue_700"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/workout_save_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/exercises_label"
        android:layout_marginTop="24dp"
        android:layout_below="@id/add_exercises_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="Exercises"
        />

    <View
        android:id="@+id/vertical_bar"
        android:layout_below="@id/exercises_label"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@color/indigo_a200" />

    <ListView
        android:layout_below="@id/vertical_bar"
        android:id="@+id/list_exercise"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="0dp"/>

</RelativeLayout>